# medical-qa-qlora-finetune

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  pyproject.toml
artifacts/gemma-3-4b-it/: metrics.json
artifacts/gemma-3-4b-it-qlora-finetune/: metrics.json
artifacts/gemma-3-4b-it-qlora-finetune/adapter/: README.md  adapter_config.json
artifacts/gemma-3-4b-it-qlora-finetune/predictions/: test_id.jsonl  test_ood.jsonl
artifacts/gemma-3-4b-it/predictions/: test_id.jsonl  test_ood.jsonl
artifacts/medgemma-4b-it/: metrics.json
artifacts/medgemma-4b-it/predictions/: test_id.jsonl  test_ood.jsonl
configs/: data.yaml  evaluation.yaml  training.yaml
configs/models/: gemma-3-4b-it-qlora-finetune.yaml  gemma-3-4b-it.yaml  medgemma-4b-it.yaml
data/processed/: build_metadata.json  dataset_dict.json
data/processed/medmcqa_processed/: state.json
data/processed/medqa_processed/: data-00000-of-00001.arrow  state.json
data/processed/splits/: dataset_dict.json
data/raw/: README.md
docs/: documentation.md  medical_qa_gemma3_4b_qlora_finetune.md
notebooks/: 01_data_exploration.ipynb
reports/eda report/: metadata.json
reports/evaluation comparison/: comparison.json
reports/qualitative/gemma-3-4b-it/: test_id.md  (+1 more)
reports/training report/: trainer_state.json
scripts/: aggregate_metrics.py
src/data/: build.py  deduplication.py  extract.py  filtering.py  leakage.py  splits.py
src/eval/: inference.py  metrics.py  parsing.py  qualitative.py
src/models/: prompt.py
src/pipelines/: evaluation_pipeline.py  training_pipeline.py
(+14 files in other folders)
