[project]
name = "medical-qa-qlora-finetune"
version = "1.0.0"
description = "Medical QA project exploring domain adaptation by QLoRA fine-tuning a general-purpose LLM and benchmarking it against MedGemma."
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.12"
dependencies = [
    "torch>=2.2.0",
    "transformers>=4.38.0",
    "peft>=0.9.0",
    "trl>=0.8.0",
    "datasets>=2.18.0",
    "accelerate>=0.27.0",
    "bitsandbytes>=0.43.0",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "langdetect>=1.0.9",
    "pyyaml>=6.0",
    "jinja2>=3.1.0"
]

[project.optional-dependencies]
dev = [
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "jupyter>=1.0.0",
    "ruff>=0.3.0",
    "pytest>=8.0.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]